--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ i{
 }
 
 /* home page */
+header{
+  display: block;
+}
 .header-list{
   display: none;
 }
@@ -184,6 +187,7 @@ i{
 
 main {
   background-image: url(assets/Background.png);
+  display: block;
 }
 
 .recommended-mv,.trending-now{
@@ -271,6 +275,7 @@ main {
   flex-direction: column;
   justify-content: center;
   gap: 10px;
+  z-index: 9999;
 }
 .search-logo img {
   width: 8rem;
@@ -385,97 +390,6 @@ main {
   line-height: 1.2;
 }
 
-/* Profile Page */
-.pro-bg {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  color: #ffffff;
-}
-
-.pro-bg img{
-  width: 100%;
-  height: 170%;
-}
-
-.pro-main {
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  z-index: 999;
-}
-
-.pro-main .pro-header {
-  padding: 2rem 1rem 0.5rem;
-  background-color: #0a0a0a;
-}
-
-.pro-main .pro-header img {
-  position: relative;
-  width: 30%;
-  left: 35%;
-}
-
-.pro-content {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  gap: 3rem;
-}
-
-.pro-content .pro-top {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  padding-top: 1rem;
-}
-
-.pro-content .pro-top h3 {
-  font-weight: 200;
-}
-
-.pro-content .pro-top img {
-  width: 45%;
-  border-radius: 50%;
-  border: 2px solid #ffffff;
-}
-
-.pro-content .pro-bottom {
-  position: relative;
-  display: flex;
-  gap: 1rem;
-  text-align: left;
-  justify-content: space-around;
-  width: 95%;
-  left: 2.5%;
-  padding: 2rem;
-  background-color: #0000334D;
-}
-
-
-
-.pro-content .pro-bottom .pro-label h5 {
-  display: block;
-  padding: 0.5rem 0;
-  font-size: x-small;
-}
-
-.pro-content .pro-bottom .pro-details p {
-  display: block;
-  padding: 0.5rem 0;
-  font-size: x-small;
-  font-weight: 200;
-  color: #bbbbbb;
-}
-
-/* vedio player */
-video {
-  width: 100vw;     
-  height: 97vh;    
-  object-fit: contain; 
-}
-
 /* Notification style*/
 .notification-container {
   width: 100%;
@@ -505,6 +419,7 @@ video {
   padding-block: 15px;
   background: var(--primary-black);
   padding-inline: 15px;
+  z-index: 9999;
 }
 .logo-section img {
   display: flex;
@@ -537,94 +452,6 @@ video {
   font-weight: 400;
 }
 
-/* FORM STYLE */
-/* SIGNUP */
-.login,
-.signup {
-  display: none;
-}
-.login.active,
-.signup.active {
-  display: block;
-  opacity: 1;
-  z-index: 10;
-  min-height: 100vh;
-  color: var(--primary-white);
-}
-.form-image{
-  display: none;
-}
-.form-sec{
-  background-image: url(assets/Background.png);
-  width: 100%;
-  height: 100vh;
-}
-.logo-form {
-  background-color: var(--primary-black);
-  width: 100%;
-  height: 50px;
-}
-.logo-form img {
-  display: flex;
-  margin-inline: auto;
-  padding-block: 15px;
-}
-.welcome {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: var(--primary-white);
-  margin-top: 50px;
-}
-.welcome p {
-  font-weight: 400;
-  font-size: 18px;
-}
-.welcome span {
-  font-weight: 700;
-  font-size: 12px;
-}
-form {
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-form input {
-  outline: none;
-  border: 1px solid var(--primary-white);
-  background: transparent;
-  border-radius: 5px;
-  width: 16rem;
-  margin-top: 15px;
-  padding: 5px;
-  font-weight: 500;
-  font-size: 8px;
-}
-form button {
-  width: 5rem;
-  height: 30px;
-  background-color: var(--primary-blue);
-  border-radius: 8px;
-  color: var(--primary-white);
-  font-weight: 500;
-  font-size: 10px;
-  border: none;
-  margin-top: 15px;
-}
-form p {
-  color: var(--primary-white);
-  margin-top: 15px;
-  font-size: 12px;
-  font-weight: 400;
-}
-form p a {
-  font-size: 10px;
-  font-weight: 500;
-  color: var(--light-blue);
-  text-decoration: none;
-}
-
 /* Menu Section */
 .mainmenu {
   position: fixed;
@@ -653,6 +480,7 @@ form p a {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  z-index: 9999;
   padding-bottom: 0;
 }
 .menu-icons {
@@ -885,182 +713,93 @@ form p a {
   font-size: 60px;
 }
 
-/* vedio player */
-.vedio{
+/* FORM STYLE */
+/* SIGNUP */
+.login,
+.signup {
   display: none;
-  margin: 30px;
-  position: relative;
 }
-.video-wrapper {
-    width: 100%;
-    max-width: 900px;
-    margin: 40px auto;
-    border-radius: 12px;
-    overflow: hidden;
-    position: relative;
+.login.active,
+.signup.active {
+  display: block;
+  opacity: 1;
+  z-index: 10;
+  min-height: 100vh;
+  color: var(--primary-white);
 }
-
-.video-image {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-/* Top icons */
-.top-icons {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    right: 15px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.icon-btn {
-    width: 40px;
-    height: 40px;
-    background: rgba(0, 0, 0, 0.45);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.center-controls {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    align-items: center;
-    gap: 40px;
-}
-
-.play-btn {
-    width: 75px;
-    height: 75px;
-    background: rgba(0, 0, 0, 0.45);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 40px;
-    cursor: pointer;
-}
-
-.side-btn {
-    width: 45px;
-    height: 45px;
-    background: rgba(0, 0, 0, 0.45);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-/* Movie text */
-.movie-info {
-    position: absolute;
-    bottom: 70px;
-    left: 20px;
-    color: white;
-}
-
-.movie-title {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.movie-type {
-    font-size: 14px;
-    opacity: 0.8;
-}
-
-/* Progress bar */
-.progress-container {
-    width: 90%;
-    height: 3px;
-    background: rgba(255, 255, 255, 0.4);
-    position: absolute;
-    bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 30px;
-}
-
-.progress-fill {
-    height: 100%;
-    width: 45%;
-    background: white;
-    border-radius: 30px;
-}
-
-/* Time label */
-.time-label {
-    position: absolute;
-    bottom: 15px;
-    right: 20px;
-    color: white;
-    font-size: 13px;
-}
-
-/* COMING SOOn NOTIFICATION */
-.coming-notify{
+.form-image{
   display: none;
-  font-size: 20px;
-  overflow: hidden;
-  background-color: var(--dark-blue);
-  color: var(--primary-white);
-  width: 15rem;
-  text-align: center;
-  padding: 3px;
-  border-radius: 8px;
-  position: fixed;
-  bottom: 80px;
-  right: -300px;
 }
-.coming-notify.active{
-  display: inline-block;
-  animation: coming-iden 5s forwards ease;
+.form-sec{
+  background-image: url(assets/Background.png);
+  width: 100%;
+  height: 100vh;
 }
-@keyframes coming-iden {
-  0%{
-    right: -125px;
-  }
-  50%{
-    right: 90px;
-  }
-  100%{
-     right: -300px;
-  }
+.logo-form {
+  background-color: var(--primary-black);
+  width: 100%;
+  height: 50px;
+  z-index: 9999;
 }
-
-/* FOOTER STYLE */
-footer {
-  background-color: #0a0a0a;
+.logo-form img {
+  display: flex;
+  margin-inline: auto;
+  padding-block: 15px;
 }
-.home-footer {
-  color: var(--primary-white);
-  margin-block-end: 10px;
+.welcome {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 10px;
-  font-weight: 400;
-  margin-inline: 5px;
+  color: var(--primary-white);
+  margin-top: 50px;
 }
-
-.footer-hd{
- margin-block: 10px;
+.welcome p {
+  font-weight: 400;
+  font-size: 18px;
+}
+.welcome span {
+  font-weight: 700;
+  font-size: 12px;
+}
+form {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+form input {
+  outline: none;
+  border: 1px solid var(--primary-white);
+  background: transparent;
+  border-radius: 5px;
+  width: 16rem;
+  margin-top: 15px;
+  padding: 5px;
+  font-weight: 500;
+  font-size: 8px;
+}
+form button {
+  width: 5rem;
+  height: 30px;
+  background-color: var(--primary-blue);
+  border-radius: 8px;
+  color: var(--primary-white);
+  font-weight: 500;
+  font-size: 10px;
+  border: none;
+  margin-top: 15px;
+}
+form p {
+  color: var(--primary-white);
+  margin-top: 15px;
+  font-size: 12px;
+  font-weight: 400;
+}
+form p a {
+  font-size: 10px;
+  font-weight: 500;
+  color: var(--light-blue);
+  text-decoration: none;
 }
 
 /* START OF WATCH LIST STYLES */
@@ -1068,7 +807,7 @@ footer {
   width: 100%;
   min-height: 100vh;
   margin: 0 auto;
-  display: flex;
+  display: none;
   flex-direction: column;
   background: rgba(255, 255, 255, 0.185);
   backdrop-filter: blur(1rem);
@@ -1080,6 +819,7 @@ footer {
   opacity: 0;
   transform: translateX(100%);
   transition: all 0.5s ease;
+  display: none;
 }
 .list-header {
   background: var(--primary-black);
@@ -1087,6 +827,7 @@ footer {
   display: flex;
   flex-direction: column;
   padding: 1.3rem 1rem 0.7rem;
+  z-index: 9999;
 }
 .list-logo img {
   width: 8rem;
@@ -1280,6 +1021,7 @@ footer {
   opacity: 1;
 }
 .show-list {
+  display: flex;
   opacity: 1;
   z-index: 10;
   transform: translateX(0);
@@ -1300,6 +1042,122 @@ footer {
   display: block;
 }
 
+/* Profile Page */
+.pro-bg {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  color: #ffffff;
+}
+
+.pro-bg img{
+  width: 100%;
+  height: 170%;
+}
+
+.pro-main {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  z-index: 999;
+}
+
+.pro-main .pro-header {
+  padding: 2rem 1rem 0.5rem;
+  background-color: #0a0a0a;
+}
+
+.pro-main .pro-header img {
+  position: relative;
+  width: 30%;
+  left: 35%;
+}
+
+.pro-content {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.pro-content .pro-top {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-top: 1rem;
+}
+
+.pro-content .pro-top h3 {
+  font-weight: 200;
+}
+
+.pro-content .pro-top img {
+  width: 45%;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+}
+
+.pro-content .pro-bottom {
+  position: relative;
+  display: flex;
+  gap: 1rem;
+  text-align: left;
+  justify-content: space-around;
+  width: 95%;
+  left: 2.5%;
+  padding: 2rem;
+  background-color: #0000334D;
+}
+
+
+
+.pro-content .pro-bottom .pro-label h5 {
+  display: block;
+  padding: 0.5rem 0;
+  font-size: x-small;
+}
+
+.pro-content .pro-bottom .pro-details p {
+  display: block;
+  padding: 0.5rem 0;
+  font-size: x-small;
+  font-weight: 200;
+  color: #bbbbbb;
+}
+
+/* vedio player */
+video {
+  width: 100vw;     
+  height: 97vh;    
+  object-fit: contain; 
+}
+
+
+
+/* FOOTER STYLE */
+footer {
+  background-color: #0a0a0a;
+}
+.home-footer {
+  color: var(--primary-white);
+  margin-block-end: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 10px;
+  font-weight: 400;
+  margin-inline: 5px;
+}
+
+.footer-hd{
+ margin-block: 10px;
+}
+
+
+
 
 
 /* MEDIA QUERIES */
@@ -1316,6 +1174,7 @@ footer {
   }
 
 .show-list {
+  display: block;
   opacity: 1;
   z-index: 10;
   transform: translateX(0);
